(Documentation): Updating README file with Execution Steps and Uploading Screenshots

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Security-Policy" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="Search box to filter multiple data sets by type and content, developed with ReactJs." />
-	<meta name="keywords" content="React, Searching, Reconciliation, Simetrik, WilliamVelazquez" />
+	<meta name="description" content="Search box to filter multiple data sets by type and content, developed with ReactJs and Elastic Search." />
+	<meta name="keywords" content="React, Searching, ElasticSearch, Reconciliation, Simetrik, WilliamVelazquez" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#22242c" />
